--- a/index.html
+++ b/index.html
@@ -64,12 +64,31 @@
           </div>
         </div>
         <div class="divider"></div>
+        <div class="menu-section">
+          <h2 id="h2-menu">Menú</h2>
+
+          <a href="#" class="menu-link">
+            <i class="fi fi-br-circle-user a-a-menu" id="a-a-menu"></i>
+            <span class="menu-a">Perfil</span>
+          </a>
+
+          <a href="#" class="menu-link">
+            <i class="fi fi-br-users-alt a-a-menu" id="a-a-menu"></i>
+            <span class="menu-a">Equipo</span>
+          </a>
+
+          <a href="#" class="menu-link">
+            <i class="fi fi-sr-settings a-a-menu" id="a-a-menu"></i>
+            <span class="menu-a">Ajustes</span>
+          </a>
+        </div>
       </section>
 
       <div class="principal">
         <div class="titulo">
           <!-- Contenido del título -->
           <h1>Agenda de tareas</h1>
+          <button class="crear-tarea-btn">Crear tarea</button>
         </div>
 
         <nav>
@@ -87,3 +106,4 @@
     <script src="app.js"></script>
   </body>
 </html>
+
