--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
           <div class="project-button">
             <button class="btn-nuevo">
-              <i class="fi fi-br-square-plus" id="nuevo"></i>
+              <i class="fi fi-br-edit" id="nuevo"></i>
               <h2>Nuevo proyecto</h2>
             </button>
           </div>
@@ -68,17 +68,17 @@
           <h2 id="h2-menu">Menú</h2>
 
           <a href="#" class="menu-link">
-            <i class="fi fi-br-circle-user a-a-menu" id="a-a-menu"></i>
+            <i class="fi fi-br-circle-user a-a-menu"></i>
             <span class="menu-a">Perfil</span>
           </a>
 
           <a href="#" class="menu-link">
-            <i class="fi fi-br-users-alt a-a-menu" id="a-a-menu"></i>
+            <i class="fi fi-br-users-alt a-a-menu"></i>
             <span class="menu-a">Equipo</span>
           </a>
 
           <a href="#" class="menu-link">
-            <i class="fi fi-sr-settings a-a-menu" id="a-a-menu"></i>
+            <i class="fi fi-sr-settings a-a-menu"></i>
             <span class="menu-a">Ajustes</span>
           </a>
         </div>
@@ -106,4 +106,3 @@
     <script src="app.js"></script>
   </body>
 </html>
-
