--- a/index.html
+++ b/index.html
@@ -105,6 +105,19 @@
 
         <div class="contenido">
           <!-- Contenido principal -->
+          <div class="custom-column">
+            <div class="card-task">
+              <div class="priority-indicator">Baja</div>
+              <h3>Titulo placeholder</h3>
+              <div class="task-details">
+                <i class="fi fi-rr-calendar datos"></i>
+                <span class="datos">Fecha</span>
+                <span class="separator"></span>
+                <i class="fi fi-rr-list-check datos"></i>
+                <span class="datos">0/0</span>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
