--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </div>
 
         <nav>
-          <a href="#">Tareas</a>
+          <a href="#" class="active">Tareas</a>
           <a href="#">Por hacer</a>
           <a href="#">En proceso</a>
           <a href="#">Completadas</a>
@@ -110,11 +110,11 @@
               <div class="priority-indicator">Baja</div>
               <h3>Titulo placeholder</h3>
               <div class="task-details">
-                <i class="fi fi-rr-calendar datos"></i>
-                <span class="datos">Fecha</span>
+                <i class="fi fi-rr-calendar datos datos-icon"></i>
+                <span class="datos fecha-items">Fecha</span>
                 <span class="separator"></span>
-                <i class="fi fi-rr-list-check datos"></i>
-                <span class="datos">0/0</span>
+                <i class="fi fi-rr-list-check datos datos-icon"></i>
+                <span class="datos fecha-items">0/0</span>
               </div>
             </div>
           </div>
@@ -123,8 +123,43 @@
     </div>
     <div class="overlay"></div>
     <div class="modal-tarea">
-      <!-- Contenido del modal aquí -->
-      <p>Contenido del modal...</p>
+      <div class="modal-content">
+        <div class="input-group">
+          <label for="prioridad">Prioridad</label>
+          <select id="prioridad">
+            <option value="baja">Baja</option>
+            <option value="media">Media</option>
+            <option value="alta">Alta</option>
+          </select>
+        </div>
+
+        <div class="input-group">
+          <label for="titulo-tarea">Titulo de la tarea</label>
+          <input type="text" id="titulo-tarea" />
+        </div>
+
+        <div class="input-group objetivos-container">
+          <label for="objetivo-0">Objetivos</label>
+          <input type="text" id="objetivo-0" class="objetivo-input" />
+        </div>
+        <div class="objetivo-buttons">
+          <button id="agregar-objetivo">Agregar objetivo</button>
+          <button id="quitar-objetivo">Quitar objetivo</button>
+        </div>
+
+        <div class="input-group">
+          <label for="comentarios">Comentarios</label>
+          <textarea
+            id="comentarios"
+            placeholder="Agregar comentarios"
+          ></textarea>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button id="btn-crear">Crear</button>
+        <button id="btn-crear-otro">Crear y agregar otra</button>
+        <button id="btn-cancelar">Cancelar</button>
+      </div>
     </div>
     <script src="app.js"></script>
   </body>
