--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         </div>
       </div>
       <div class="modal-footer">
-        <button id="btn-crear">Crear</button>
+        <button id="btn-crear" data-estado="">Crear</button>
         <button id="btn-crear-otro">Crear y agregar otra</button>
         <button id="btn-cancelar">Cancelar</button>
       </div>
